--- a/src/user-rules.html
+++ b/src/user-rules.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>nuTensor — Your rules</title>
+<title>nuTensor.d — Your rules</title>
 <link rel="stylesheet" href="lib/codemirror/lib/codemirror.css">
 <link rel="stylesheet" href="lib/codemirror/addon/merge/merge.css">
 
