--- a/src/raw-settings.html
+++ b/src/raw-settings.html
@@ -18,7 +18,7 @@
 <body>
 <div class="body">
 
-<p><span data-i18n="rawSettingsWarning"></span> <a class="fa-icon info important" href="https://github.com/gorhill/uMatrix/wiki/Raw-settings" target="_blank">info-circle</a>
+<p><span data-i18n="rawSettingsWarning"></span> <a class="fa-icon info important" href="https://github.com/SteelEyeballSac1/nuTensor.d/wiki/Raw-settings" target="_blank">info-circle</a>
     </p>
 <p><button id="rawSettingsApply" class="custom important" type="button" disabled="true" data-i18n="genericApplyChanges"></button>&ensp;
     </p>
