--- a/src/popup.html
+++ b/src/popup.html
@@ -8,13 +8,13 @@
 <link rel="stylesheet" href="css/common.css">
 <link rel="stylesheet" href="css/scope-selector.css">
 <link rel="stylesheet" href="css/popup.css">
-<title>nuTensor panel</title>
+<title>nuTensor.d panel</title>
 </head>
 
 <body>
 
 <div class="paneHead">
-    <div id="gotoDashboard" data-extension-url="dashboard.html" data-i18n-tip="matrixDashboardMenuEntry">nuTensor <span id="version"> </span></div>
+    <div id="gotoDashboard" data-extension-url="dashboard.html" data-i18n-tip="matrixDashboardMenuEntry">nuTensor.d <span id="version"> </span></div>
     <div id="toolbarContainer">
         <div class="toolbar">
             <span class="scope" id="specificScope"><span>&nbsp;</span></span><!--
