--- a/src/hosts-files.html
+++ b/src/hosts-files.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>nuTensor — Hosts files</title>
+<title>nuTensor.d — Hosts files</title>
 <link rel="stylesheet" href="css/fa-icons.css">
 <link rel="stylesheet" href="css/common.css">
 <link rel="stylesheet" href="css/dashboard-common.css">
@@ -23,7 +23,7 @@
 <div class="assets">
     <div data-i18n="assetsHostsSection"></div>
     <div>
-        <p><span data-i18n="hostsFilesPrompt"></span>&nbsp;<a class="fa-icon info" href="https://github.com/gorhill/uMatrix/wiki/Preset-whitelisted-and-blacklisted-domains#preset-blacklist-rules" target="_blank">info-circle</a></p>
+        <p><span data-i18n="hostsFilesPrompt"></span>&nbsp;<a class="fa-icon info" href="https://github.com/SteelEyeballSac1/nuTensor.d/wiki/Preset-whitelisted-and-blacklisted-domains#preset-blacklist-rules" target="_blank">info-circle</a></p>
         <p id="listsOfBlockedHostsPrompt"></p>
         <ul id="hosts">
             <li class="listEntry notAnAsset toImport"><input type="checkbox" id="importHosts"><label for="importHosts" data-i18n="assetsImportLabel"></label><!--
@@ -35,7 +35,7 @@
 <div class="assets">
     <div data-i18n="assetsRecipesSection"></div>
     <div>
-        <p><span data-i18n="assetsRecipesSummary"></span>&nbsp;<a class="fa-icon info" href="https://github.com/gorhill/uMatrix/wiki/Ruleset-recipes" target="_blank">info-circle</a></p>
+        <p><span data-i18n="assetsRecipesSummary"></span>&nbsp;<a class="fa-icon info" href="https://github.com/SteelEyeballSac1/nuTensor.d/wiki/Ruleset-recipes" target="_blank">info-circle</a></p>
         <ul id="recipes">
             <li class="listEntry notAnAsset toImport"><input type="checkbox" id="importRecipes"><label for="importRecipes" data-i18n="assetsImportLabel"></label><!--
                 --><textarea dir="ltr" spellcheck="false" placeholder="hostsFilesExternalListsHint"></textarea>
