--- a/src/background.html
+++ b/src/background.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>nuTensor</title>
+<title>nuTensor.d</title>
 </head>
 <body>
 <script src="js/console.js"></script>
