--- a/src/about.html
+++ b/src/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>nuTensor — About</title>
+<title>nuTensor.d — About</title>
 <link rel="stylesheet" type="text/css" href="css/common.css">
 <link rel="stylesheet" type="text/css" href="css/dashboard-common.css">
 <style>
@@ -19,7 +19,7 @@ ul {
 <body>
 <div class="body">
 
-<h3>nuTensor <span id="aboutVersion"></span></h3>
+<h3>nuTensor.d <span id="aboutVersion"></span></h3>
 <ul>
     <li>Copyright (c) Raymond Hill 2013-2020<br>
     <li>Copyright (c) Ian Parker 2020<br>
@@ -27,14 +27,14 @@ ul {
     <li><span id="aboutStorageUsed"></span><br>
     <li>&nbsp;
     <li><span data-i18n="aboutChangelog"></span><br>
-    <li><a href="https://github.com/geekprojects/nuTensor/wiki"><span data-i18n="aboutDoc"></span></a><br>
+    <li><a href="https://github.com/SteelEyeballSac1/nuTensor.d/wiki"><span data-i18n="aboutDoc"></span></a><br>
     <li><span data-i18n="aboutPermissions"></span><br>
-    <li><a href="https://github.com/geekprojects/nuTensor" data-i18n="aboutCode"></a><br>
-    <li><a href="https://github.com/geekprojects/nuTensor/issues" data-i18n="aboutIssues"></a><br>
+    <li><a href="https://github.com/SteelEyeballSac1/nuTensor.d" data-i18n="aboutCode"></a><br>
+    <li><a href="https://github.com/SteelEyeballSac1/nuTensor.d" data-i18n="aboutIssues"></a><br>
     <li><span data-i18n="aboutContributors"></span>
         <ul>
-            <li><span data-i18n="aboutCodeContributors"></span> <a href="https://github.com/geekprojects/nuTensor/graphs/contributors">nuTensor, <a href="https://github.com/gorhill/httpswitchboard/graphs/contributors">HTTP Switchboard</a>
-            <li><span data-i18n="aboutIssueContributors"></span> <a href="https://github.com/geekprojects/nuTensor/issues?q=is%3Aissue">nuTensor</a>, <a href="https://github.com/gorhill/httpswitchboard/issues?q=is%3Aissue">HTTP Switchboard</a>
+            <li><span data-i18n="aboutCodeContributors"></span> <a href="https://github.com/SteelEyeballSac1/nuTensor.d">nuTensor.d, <a href="https://github.com/gorhill/httpswitchboard/graphs/contributors">HTTP Switchboard</a>
+            <li><span data-i18n="aboutIssueContributors"></span> <a href="https://github.com/SteelEyeballSac1/nuTensor.d/issues?q=is%3Aissue">nuTensor.d</a>, <a href="https://github.com/gorhill/httpswitchboard/issues?q=is%3Aissue">HTTP Switchboard</a>
             <li><span data-i18n="aboutTranslationContributors"></span> <a href="https://github.com/geekprojects/nuTensor/wiki/Translation-work-contributors">Crowdin</a>
         </ul>
     <li><a href="https://github.com/bestiejs/punycode.js" target="_blank">Punycode.js</a> by <a href="https://github.com/mathiasbynens">Mathias Bynens</a>
