--- a/src/asset-viewer.html
+++ b/src/asset-viewer.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>uMatrix — Asset viewer</title>
+<title>nuTensor.d — Asset viewer</title>
 <link rel="stylesheet" href="lib/codemirror/lib/codemirror.css">
 <link rel="stylesheet" href="lib/codemirror/addon/search/matchesonscrollbar.css">
 <link rel="stylesheet" href="css/fa-icons.css">
