--- a/src/about.html
+++ b/src/about.html
@@ -19,23 +19,24 @@ ul {
 <body>
 <div class="body">
 
-<h3>nuTensor <span id="aboutVersion"></span></h3>
+<h3>nuTensor.d <span id="aboutVersion"></span></h3>
 <ul>
     <li>Copyright (c) Raymond Hill 2013-2020<br>
-    <li>Copyright (c) Ian Parker 2020<br>
+    <li>Copyright (c) Ian Parker 2020-2021<br>
+    <li>Copyright (c) SteelEyeballSac1 2023<br>
     <li>&nbsp;
     <li><span id="aboutStorageUsed"></span><br>
     <li>&nbsp;
     <li><span data-i18n="aboutChangelog"></span><br>
-    <li><a href="https://github.com/geekprojects/nuTensor/wiki"><span data-i18n="aboutDoc"></span></a><br>
+    <li><a href="https://github.com/SteelEyeballSac1/nuTensor.d/wiki"><span data-i18n="aboutDoc"></span></a><br>
     <li><span data-i18n="aboutPermissions"></span><br>
     <li><a href="https://github.com/geekprojects/nuTensor" data-i18n="aboutCode"></a><br>
     <li><a href="https://github.com/geekprojects/nuTensor/issues" data-i18n="aboutIssues"></a><br>
     <li><span data-i18n="aboutContributors"></span>
         <ul>
-            <li><span data-i18n="aboutCodeContributors"></span> <a href="https://github.com/geekprojects/nuTensor/graphs/contributors">nuTensor, <a href="https://github.com/gorhill/httpswitchboard/graphs/contributors">HTTP Switchboard</a>
-            <li><span data-i18n="aboutIssueContributors"></span> <a href="https://github.com/geekprojects/nuTensor/issues?q=is%3Aissue">nuTensor</a>, <a href="https://github.com/gorhill/httpswitchboard/issues?q=is%3Aissue">HTTP Switchboard</a>
-            <li><span data-i18n="aboutTranslationContributors"></span> <a href="https://github.com/geekprojects/nuTensor/wiki/Translation-work-contributors">Crowdin</a>
+            <li><span data-i18n="aboutCodeContributors"></span> <a href="https://github.com/SteelEyeballSac1/nuTensor.d/graphs/contributors">nuTensor.d, <a href="https://github.com/gorhill/httpswitchboard/graphs/contributors">HTTP Switchboard</a>
+            <li><span data-i18n="aboutIssueContributors"></span> <a href="https://github.com/SteelEyeballSac1/nuTensor.d/issues?q=is%3Aissue">nuTensor.d</a>, <a href="https://github.com/gorhill/httpswitchboard/issues?q=is%3Aissue">HTTP Switchboard</a>
+            <li><span data-i18n="aboutTranslationContributors"></span> <a href="https://github.com/SteeleEyeballSac1/nuTensor/wiki/Translation-work-contributors">Crowdin</a>
         </ul>
     <li><a href="https://github.com/bestiejs/punycode.js" target="_blank">Punycode.js</a> by <a href="https://github.com/mathiasbynens">Mathias Bynens</a>
     <li><a href="https://fontawesome.com/" target="_blank">Font Awesome</a> by <a href="https://github.com/davegandy">Dave Gandy</a>
